--- a/feedback/DragHere.xaml
+++ b/feedback/DragHere.xaml
@@ -14,14 +14,19 @@
     <Grid x:Name="Grid1" >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition x:Name="middle" Width="3*"/>
             <ColumnDefinition Width="2*"/>
 
         </Grid.ColumnDefinitions>
         <Rectangle VerticalAlignment="Stretch" Grid.Column="0" HorizontalAlignment="Stretch" Fill="Black" Opacity="0.3"/>
         <Rectangle VerticalAlignment="Stretch" Grid.Column="1" HorizontalAlignment="Stretch" Fill="Black" Opacity="0.3"/>
         <Rectangle VerticalAlignment="Stretch" Grid.Column="2" HorizontalAlignment="Stretch" Fill="Black" Opacity="0.3"/>
-        <Image x:Name="playButton" Opacity="1" Grid.Column="1" Source="../img/add_circle_black.png"  VerticalAlignment="Center" HorizontalAlignment="Center"></Image>
-    </Grid>
+            
+                <Path Grid.Column="1" Stretch="Uniform" Fill="#006f62" Data="M17,13H13V17H11V13H7V11H11V7H13V11H17M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" >
+                    
+                </Path>
+
+
+        </Grid>
     </Grid>
 </Page>
