--- a/pages/EditView.xaml
+++ b/pages/EditView.xaml
@@ -162,7 +162,7 @@
                                 <TextBlock VerticalAlignment="Center" Text="{Binding Item3}" Visibility="Hidden" x:Name="SongId"></TextBlock>
 
                             <Grid MouseUp="CurrentPlaylist_SelectionChanged" Background="Transparent" MinWidth="20" VerticalAlignment="Stretch" HorizontalAlignment="Right" Grid.Column="4">
-                                <Path  Data="M2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12M10,17L15,12L10,7V17Z" Stretch="Uniform" Fill="Black"  x:Name="playItemButton">
+                                <Path  Data="M2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12M10,17L15,12L10,7V17Z" Stretch="Uniform" Fill="#FF1F1F1F"  x:Name="playItemButton">
                                     <Path.Style>
                                         <Style TargetType="Path">
 
